@@ -6,7 +6,7 @@
 	<groupId>ca.uhn.hapi.fhir</groupId>
 	<artifactId>hapi-fhir</artifactId>
 	<packaging>pom</packaging>
-	<version>4.1.0-SNAPSHOT</version>
+	<version>4.2.0-SNAPSHOT</version>
 	<name>HAPI-FHIR</name>
 	<description>An open-source implementation of the FHIR specification in Java.</description>
 	<url>https://hapifhir.io</url>
@@ -100,19 +100,32 @@
 			<organization>University Health Network</organization>
 		</developer>
 		<developer>
+			<id>grahamegrieve</id>
+			<name>Grahame Grieve</name>
+			<organization>Health Intersections</organization>
+		</developer>
+		<developer>
 			<id>dmuylwyk</id>
 			<name>Diederik Muylwyk</name>
 			<organization>Smile CDR</organization>
 		</developer>
 		<developer>
+			<id>fil512</id>
+			<name>Ken Stevens</name>
+			<organization>Smile CDR</organization>
+		</developer>
+		<developer>
+			<id>yogthos</id>
 			<name>Dmitri Sotnikov</name>
 			<organization>University Health Network</organization>
 		</developer>
 		<developer>
+			<id></id>
 			<name>Lisa Wong</name>
 			<organization>University Health Network</organization>
 		</developer>
 		<developer>
+			<id>jmandel</id>
 			<name>Josh Mandel</name>
 			<organization>Boston Children's Hospital</organization>
 		</developer>
@@ -122,10 +135,12 @@
 			<organization>University Health Network</organization>
 		</developer>
 		<developer>
+			<id>t106uhn</id>
 			<name>Neal Acharya</name>
 			<organization>University Health Network</organization>
 		</developer>
 		<developer>
+			<id>davidhay25</id>
 			<name>David Hay</name>
 			<organization>Orion Health</organization>
 		</developer>
@@ -554,6 +569,7 @@
 		</developer>
 		<developer>
 			<id>jaferkhan</id>
+			<name>Jafer Khan Shamshad</name>
 		</developer>
 		<developer>
 			<id>CodeAndChoke</id>
@@ -567,6 +583,13 @@
 			<id>jelmerterwal</id>
 			<name>Jelmer ter Wal</name>
 		</developer>
+		<developer>
+			<id>jiaola</id>
+			<name>Dazhi Jiao</name>
+		</developer>
+		<developer>
+			<id>dionmcm</id>
+		</developer>
 	</developers>
 
 	<licenses>
@@ -578,8 +601,10 @@
 
 	<properties>
 
-		<fhir_core_version>4.0.19-SNAPSHOT</fhir_core_version>
+		<fhir_core_version>4.1.42-SNAPSHOT</fhir_core_version>
 		<ucum_version>1.0.2</ucum_version>
+
+		<surefire_jvm_args>-Dfile.encoding=UTF-8 -Xmx2048m</surefire_jvm_args>
 
 		<!-- configure timestamp in MANIFEST.MF for maven-war-provider -->
 		<maven.build.timestamp.format>yyyy-MM-dd'T'HH:mm:ss'Z'</maven.build.timestamp.format>
@@ -601,7 +626,7 @@
 		<commons_lang3_version>3.9</commons_lang3_version>
 		<derby_version>10.14.2.0</derby_version>
 		<!--<derby_version>10.15.1.3</derby_version>-->
-		<error_prone_annotations_version>2.3.3</error_prone_annotations_version>
+		<error_prone_annotations_version>2.3.4</error_prone_annotations_version>
 		<error_prone_core_version>2.3.3</error_prone_core_version>
 		<guava_version>28.0-jre</guava_version>
 		<gson_version>2.8.5</gson_version>
@@ -611,8 +636,9 @@
 		<jaxb_runtime_version>2.3.1</jaxb_runtime_version>
 		<jersey_version>2.25.1</jersey_version>
 		<!-- 9.4.17 seems to have issues -->
-		<jetty_version>9.4.14.v20181114</jetty_version>
+		<jetty_version>9.4.24.v20191120</jetty_version>
 		<jsr305_version>3.0.2</jsr305_version>
+		<flyway_version>6.1.0</flyway_version>
 		<!--<hibernate_version>5.2.10.Final</hibernate_version>-->
 		<hibernate_version>5.4.6.Final</hibernate_version>
 		<!-- Update lucene version when you update hibernate-search version -->
@@ -621,18 +647,18 @@
 		<hibernate_validator_version>5.4.2.Final</hibernate_validator_version>
 		<httpcore_version>4.4.11</httpcore_version>
 		<httpclient_version>4.5.9</httpclient_version>
-		<jackson_version>2.9.9</jackson_version>
-		<jackson_databind_version>2.9.10</jackson_databind_version>
+		<jackson_version>2.10.0</jackson_version>
+		<jackson_databind_version>2.10.0</jackson_databind_version>
 		<maven_assembly_plugin_version>3.1.0</maven_assembly_plugin_version>
 		<maven_license_plugin_version>1.8</maven_license_plugin_version>
 		<resteasy_version>4.0.0.Beta3</resteasy_version>
-		<ph_schematron_version>5.0.4</ph_schematron_version>
-		<ph_commons_version>9.1.1</ph_commons_version>
+		<ph_schematron_version>5.2.0</ph_schematron_version>
+		<ph_commons_version>9.3.8</ph_commons_version>
 		<plexus_compiler_api_version>2.8.5</plexus_compiler_api_version>
 		<servicemix_saxon_version>9.5.1-5_1</servicemix_saxon_version>
 		<servicemix_xmlresolver_version>1.2_5</servicemix_xmlresolver_version>
 		<slf4j_version>1.7.28</slf4j_version>
-		<spring_version>5.2.0.RELEASE</spring_version>
+		<spring_version>5.2.3.RELEASE</spring_version>
 		<!-- FYI: Spring Data JPA 2.1.9 causes test failures due to unexpected cascading deletes -->
 		<spring_data_version>2.2.0.RELEASE</spring_data_version>
 		<spring_boot_version>2.2.0.RELEASE</spring_boot_version>
@@ -707,7 +733,7 @@
 			<dependency>
 				<groupId>com.icegreen</groupId>
 				<artifactId>greenmail</artifactId>
-				<version>1.5.10</version>
+				<version>1.5.11</version>
 			</dependency>
 			<dependency>
 				<groupId>com.icegreen</groupId>
@@ -742,7 +768,7 @@
 			<dependency>
 				<groupId>com.h2database</groupId>
 				<artifactId>h2</artifactId>
-				<version>1.4.199</version>
+				<version>1.4.200</version>
 			</dependency>
 			<dependency>
 				<groupId>com.helger</groupId>
@@ -874,8 +900,7 @@
 			<dependency>
 				<groupId>com.microsoft.sqlserver</groupId>
 				<artifactId>mssql-jdbc</artifactId>
-				<!--<version>6.2.2.jre8</version>-->
-				<version>7.0.0.jre8</version>
+				<version>7.4.1.jre8</version>
 			</dependency>
 			<dependency>
 				<groupId>javax.mail</groupId>
@@ -954,7 +979,7 @@
 			<dependency>
 				<groupId>org.apache.commons</groupId>
 				<artifactId>commons-dbcp2</artifactId>
-				<version>2.6.0</version>
+				<version>2.7.0</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.commons</groupId>
@@ -1081,7 +1106,7 @@
 			<dependency>
 				<groupId>org.awaitility</groupId>
 				<artifactId>awaitility</artifactId>
-				<version>4.0.0-rc1</version>
+				<version>4.0.1</version>
 			</dependency>
 			<dependency>
 				<groupId>org.codehaus.plexus</groupId>
@@ -1286,12 +1311,12 @@
 			<dependency>
 				<groupId>org.mockito</groupId>
 				<artifactId>mockito-core</artifactId>
-				<version>3.1.0</version>
+				<version>3.2.0</version>
 			</dependency>
 			<dependency>
 				<groupId>org.postgresql</groupId>
 				<artifactId>postgresql</artifactId>
-				<version>42.2.6.jre7</version>
+				<version>42.2.9</version>
 			</dependency>
 			<dependency>
 				<groupId>org.quartz-scheduler</groupId>
@@ -1468,6 +1493,11 @@
 				<artifactId>xpp3_xpath</artifactId>
 				<version>1.1.4c</version>
 			</dependency>
+			<dependency>
+				<groupId>org.flywaydb</groupId>
+				<artifactId>flyway-core</artifactId>
+				<version>${flyway_version}</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
@@ -1623,7 +1653,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-failsafe-plugin</artifactId>
-					<version>3.0.0-M3</version>
+					<version>3.0.0-M4</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -1654,8 +1684,9 @@
 					<configuration>
 						<redirectTestOutputToFile>true</redirectTestOutputToFile>
 						<runOrder>random</runOrder>
-						<argLine>-Dfile.encoding=UTF-8 -Xmx1024m</argLine>
+						<argLine>@{argLine} ${surefire_jvm_args}</argLine>
 						<forkCount>1.0C</forkCount>
+						<trimStackTrace>false</trimStackTrace>
 					</configuration>
 				</plugin>
 				<plugin>
@@ -1676,7 +1707,7 @@
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>animal-sniffer-maven-plugin</artifactId>
-					<version>1.16</version>
+					<version>1.18</version>
 				</plugin>
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
@@ -2234,6 +2265,21 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<configuration>
+					<dumpOnExit>true</dumpOnExit>
+				</configuration>
+				<executions>
+					<execution>
+						<id>default-prepare-agent</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 
@@ -2484,6 +2530,31 @@
 			<modules>
 				<module>hapi-fhir-jacoco</module>
 			</modules>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.jacoco</groupId>
+						<artifactId>jacoco-maven-plugin</artifactId>
+						<configuration>
+							<dumpOnExit>true</dumpOnExit>
+						</configuration>
+						<executions>
+							<execution>
+								<id>default-prepare-agent</id>
+								<goals>
+									<goal>prepare-agent</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<id>CI</id>
+			<properties>
+				<surefire_jvm_args>-Dfile.encoding=UTF-8 -Xmx2048m -XX:TieredStopAtLevel=1 -XX:+UseParallelGC -Xverify:none  -Dfile.encoding=UTF-8 -Xss128M -XX:MetaspaceSize=512M -XX:MaxMetaspaceSize=2048M</surefire_jvm_args>
+			</properties>
 		</profile>
 		<profile>
 			<id>NOPARALLEL</id>
